issue 2 clear-lotnumexcel-residue

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
                             <!---admin nav link only appears if an admin is logged in-->
                             <a class="nav-item nav-link" href="/core/safetychecklist">Forklift Checklist</a>
                             <a class="nav-item nav-link" href="/core/blendthese">Blends</a>
-                            <a class="nav-item nav-link" href="/core/lotnumbersfromexcel">Lot Numbers</a>
+                            <a class="nav-item nav-link" href="/core/lotnumrecords">Lot Numbers</a>
                             {% if user.is_staff %}
                                 <a class="nav-item nav-link" href="/admin">Admin</a>
                             {% endif %}
