--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Lot Numbers</h1>
     <div class='text-center'>
-        <h1>Lot Numbers</h1>
+        <a href="/core/lotnumform">
+            <button class="btn btn-secondary">New Lot Number</button>
+        </a>
         <br/><br/> 
     </div>
     <table class="table text-left table-bordered">
