--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
         <link rel="stylesheet" type="text/css" href="{% static 'core/main.css' %}">
+
+        {% block title %}<title>The Blendverse</title>{% endblock %}
+
     </head>
     <body>
         <header class="site-header">
