changed Base.html template, added jQuery to lotnumform.html

--- a/app/core/templates/core/lotnumform.html
+++ b/app/core/templates/core/lotnumform.html
@@ -1,11 +1,33 @@
 {% extends 'base.html' %}
 
+<!-- Header Blocks -->
 {% block title %}<title>New Lot Number</title>{% endblock %}
+{% block scripts %}
+    <script src= "https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>  
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>  
+    
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css" />
+{% endblock %}
+<!-- End Header -->
 
+<!-- Body Blocks -->
 {% block content %}
+    <script>
+        $( function() {
+            var CiItemItemCodes = [
+                {% for itemcode in itemCodes %}
+                    "{{itemCodes}}",
+                {% endfor %}
+            ];
+            $( "#id_part_number" ).autocomplete({
+              source: CiItemItemCodes
+            });
+          } );  
+    </script>
     <div class='text-center'>
         <h1>New Lot Number</h1>
-        <h2>{{newLotNum}}</h2>
+        <h2>{{nextLotNum}}</h2>
         <br/><br/>
         {% if submitted %}
             <a href='/core/lotnumrecords'>View All Lot Numbers</a>
@@ -18,3 +40,4 @@
         {% endif %}
     </div>
 {% endblock content %}
+<!-- End Body -->
