--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" type="text/css" href="{% static 'core/main.css' %}">
 
         {% block title %}<title>The Blendverse</title>{% endblock %}
+        
+        {% block scripts %}{% endblock %}
 
     </head>
     <body>
