Blendsheets url now contains lot info

--- a/app/core/templates/core/blendsheet.html
+++ b/app/core/templates/core/blendsheet.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-
+<h2>{{ blendinfo.part_number }}</h2><br>
+<h2>{{ blendinfo.lot_number }}</h2><br>
+<h2>{{ blendinfo.quantity }}</h2><br>
 
 {% endblock content %}
