--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -8,32 +8,33 @@
         </a>
         <br/><br/> 
     </div>
-    <table class="table text-left table-bordered">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Blend</th>
-                <th scope="col">Description</th>
-                <th scope="col">Lot_Number</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Date</th>
-            </tr>
-        </thead>
-        {% for item in lotnumlist %}
-            <tr>
-                <td>{{ item.part_number }}</td>
-                <td>{{ item.description }}</td>
-                <td>{{ item.lot_number }}</td>
-                <td>{{ item.quantity }}</td>
-                <td>{{ item.date }}</td>
-                {% if user.is_staff %}
-                    <td>
-                        <a href="/core/blendsheet/{{ item.part_number }}/{{ item.lot_number }}/{{ item.quantity }}/{{ item.description }}">
-                            <button class="btn btn-secondary">Blend Sheet</button>
-                        </a>
-                    </td>
-                {% endif %}
-            </tr>
-        {% endfor %}
-    </table>
-
+    <div class="table-responsive-sm">
+        <table class="table text-left table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Blend</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Lot_Number</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Date</th>
+                </tr>
+            </thead>
+            {% for item in lotnumlist %}
+                <tr>
+                    <td>{{ item.part_number }}</td>
+                    <td>{{ item.description }}</td>
+                    <td>{{ item.lot_number }}</td>
+                    <td>{{ item.quantity }}</td>
+                    <td>{{ item.date }}</td>
+                    {% if user.is_staff %}
+                        <td>
+                            <a href="/core/blendsheet/{{ item.part_number }}/{{ item.lot_number }}/{{ item.quantity }}/{{ item.description }}">
+                                <button class="btn btn-secondary">Blend Sheet</button>
+                            </a>
+                        </td>
+                    {% endif %}
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock content %}
