changed blendsheet() in views and started messing w template

--- a/app/core/templates/core/blendsheet.html
+++ b/app/core/templates/core/blendsheet.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 
-<h2>{{ blendinfo.part_number }}</h2><br>
-<h2>{{ blendinfo.lot_number }}</h2><br>
-<h2>{{ blendinfo.quantity }}</h2><br>
+<h2>Starbrite Master Formula: Ref. No. {{ stepOne.ref_no }}</h2>
+<h2>{{ lotInfo.lot_number }}</h2><br>
 
 {% endblock content %}
