--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -28,7 +28,7 @@
                     <td>{{ item.date }}</td>
                     {% if user.is_staff %}
                         <td>
-                            <a href="/core/blendsheet/{{ item.part_number }}/{{ item.lot_number }}/{{ item.quantity }}/{{ item.description }}">
+                            <a href="/core/blendsheet/{{ item.lot_number }}">
                                 <button class="btn btn-secondary">Blend Sheet</button>
                             </a>
                         </td>
