--- a/app/core/templates/core/lotnumform.html
+++ b/app/core/templates/core/lotnumform.html
@@ -7,7 +7,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>  
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>  
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css" />  
+{% load static %}
+<script src="{% static 'core/lotnumform.js' %}"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'core/lotnumform.css' %}">
+
 {% endblock %}
+
 
 <!-- Body Blocks -->
 {% block content %}
@@ -25,16 +30,6 @@
             </form>
         {% endif %}
     </div>
-    <style>
-        .ui-autocomplete {
-             max-height: 200px;
-             overflow-y: auto;
-             /* prevent horizontal scrollbar */
-             overflow-x: hidden;
-             /* add padding to account for vertical scrollbar */
-             padding-right: 20px;
-         } 
-    </style>
     <script>
         //Item Code Dropdown
         $( function() {
@@ -73,6 +68,6 @@
                 },
             });
         });
-     </script> 
+     </script>
   {% endblock content %}
 <!-- End Body -->
