--- a/app/core/static/core/lotnumform.css
+++ b/app/core/static/core/lotnumform.css
@@ -5,4 +5,18 @@
     overflow-x: hidden;
     /* add padding to account for vertical scrollbar */
     padding-right: 20px;
-} 
+}
+
+label {
+    margin-right: 10px;
+}
+
+input[name="description"] {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+input {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
