--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,14 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
         <link rel="stylesheet" type="text/css" href="{% static 'core/main.css' %}">
+
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>  
+        <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>  
+        <link href="https://code.jquery.com/ui/1.13.1/themes/cupertino/jquery-ui.css" rel="stylesheet" type="text/css" /> 
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         {% block title %}<title>The Blendverse</title>{% endblock %}
         
@@ -18,27 +24,39 @@
     </head>
     <body>
         <header class="site-header">
+            <!--Navbar-->
             <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
                 <div class="container">
                     <a class="navbar-brand mr-4" href="/">KPK-App</a>
-                    <div class="collapse navbar-collapse" id="navbarToggle">
-                        <div class="navbar-nav mr-auto">
+                    <!--Collapse button-->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>    
+                        <!--Collapsable content-->
+                        <div class="collapse navbar-collapse" id="navbarToggle">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/core/safetychecklist">Forklift Checklist</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/core/blendthese">Blends</a>
+                                </li>
+                                <li class="nav-item">    
+                                    <a class="nav-link" href="/core/lotnumrecords">Lot Numbers</a>
+                                </li>
                             <!---admin nav link only appears if an admin is logged in-->
-                            <a class="nav-item nav-link" href="/core/safetychecklist">Forklift Checklist</a>
-                            <a class="nav-item nav-link" href="/core/blendthese">Blends</a>
-                            <a class="nav-item nav-link" href="/core/lotnumrecords">Lot Numbers</a>
-                            {% if user.is_staff %}
-                                <a class="nav-item nav-link" href="/admin">Admin</a>
-                            {% endif %}
+                                {% if user.is_staff %}
+                                <li class="nav-item">    
+                                    <a class="nav-link" href="/admin">Admin</a>
+                                </li>
+                                {% endif %}
+                            </ul>
+                            <div class="navbar-nav" class='text-right'>
+                                {% if user.is_authenticated %}
+                                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                                {% else %}
+                                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                                {% endif %}
+                            </div>
                         </div>
-                        <div class="navbar-nav" class='text-right'>
-                            {% if user.is_authenticated %}
-                                <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
-                            {% else %}
-                                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                            {% endif %}
-                        </div>
-                    </div>
                 </div>
             </nav>
         </header>
@@ -51,10 +69,6 @@
                 
             </div>
         </main>
-
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
     </body>
     <footer>
         <br></br>
