--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -4,7 +4,7 @@
 <h1>Lot Numbers</h1>
     <div class='text-center'>
         <a href="/core/lotnumform">
-            <button class="btn btn-secondary">New Lot Number</button>
+            <button class="btn btn-secondary btn-widen">New Lot Number</button>
         </a>
         <br/><br/> 
     </div>
