--- a/app/core/static/core/main.css
+++ b/app/core/static/core/main.css
@@ -82,3 +82,9 @@ body {
   .account-heading {
     font-size: 2.5rem;
   }
+
+  .btn-widen {
+    padding: 10px 200px;
+    font-size: 20px;
+    border-radius: 10px;
+}
