--- a/app/core/templates/core/checklistlog.html
+++ b/app/core/templates/core/checklistlog.html
@@ -1,16 +1,24 @@
 {% extends 'base.html' %}
+{% load static%}
+{% block scripts%} <link rel="stylesheet" type="text/css" href="{% static 'core/userforms.css' %}">{% endblock%}
+
 
 {% block content %}
-    <div class='text-center'>
+    <div>
         <h1>Daily Checklist</h1>
-        <br/><br/>
         {% if submitted %}
             Thank you, your Safety Log was submitted successfully.
         {% else %}
             <form action="" method=POST>
                 {% csrf_token %}
-                {{form.as_p}}
-                <input type="submit" value="Submit" class="btn btn-secondary">
+                <table>
+                    {{form.as_table}}
+                    <tr>
+                        <td>
+                            <input type="submit" name="submit" value="Submit" class="btn btn-secondary">
+                        </td>
+                    </tr>
+                </table>
             </form>
         {% endif %}
     </div>
