Added nav menu to login page

--- a/app/core/templates/core/lotnumform.html
+++ b/app/core/templates/core/lotnumform.html
@@ -6,7 +6,7 @@
 
 {% block scripts %} 
     <link rel="stylesheet" type="text/css" href="{% static 'core/userforms.css' %}">
-{% endblock %}
+{% endblock scripts %}
 
 
 <!-- Body Blocks -->
