--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Lot Numbers</h1>
-    <div class='text-center'>
+    <div>
         <a href="/core/lotnumform">
             <button class="btn btn-secondary">New Lot Number</button>
         </a>
