--- a/app/core/templates/core/checklistlog.html
+++ b/app/core/templates/core/checklistlog.html
@@ -5,26 +5,21 @@
 
 {% block content %}
     <div>
-        <h1>Daily Checklist</h1>
+        <h1>Daily Forklift Inspection</h1>
         {% if submitted %}
-            Thank you, your Safety Log was submitted successfully.
+            Thank you, your daily forklift inspection checklist was submitted successfully.
         {% else %}
             <form action="" method=POST>
                 {% csrf_token %}
-                <style>
-                    input[type="checkbox"] {
-                        width: 26px;
-                        height: 26px;
-                    }
-                </style>
-                <table>
-                    {{form.as_table}}
-                    <tr>
-                        <td>
-                            <input type="submit" name="submit" value="Submit" class="btn btn-secondary">
-                        </td>
-                    </tr>
+                <table id="forkliftchecklistform" style="table-layout:fixed; border-collapse:collapse;">
+                {% for field in form %}
+                    <td><b>{{ field.label }}:</b></td> <td>{{ field }}</td>
+                    {% if forloop.counter|divisibleby:"2" %}
+                        <tr></tr>
+                    {% endif %}
+                {% endfor %}
                 </table>
+                <input type="submit" value="Submit Checklist" class="btn btn-secondary" />
             </form>
         {% endif %}
     </div>
