media only checkbox tweaks for forklift checklist page (terribly small commit)

--- a/app/core/static/core/userforms.css
+++ b/app/core/static/core/userforms.css
@@ -58,4 +58,7 @@ input[type="checkbox"] {
         text-align: center;
         vertical-align: middle;
     }
+    #mobileforkliftchecklistform input[type="checkbox"] {
+        margin: 3px 25%;
+    }
 }
