--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -173,7 +173,7 @@
           </div>
         </a>
         <h2>PO Import Template</h2>
-        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/POs%20and%20SOs/Sage%20Import%20Template/_Template/POtoSO.xlsx?web=1" class="icon-link d-inline-flex align-items-center">
+        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/POs%20and%20SOs/Sage%20Import%20Template/_Template/POtoSO.xlsx" class="icon-link d-inline-flex align-items-center">
           Open PO Import Template
           <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
         </a>
