--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -212,6 +212,35 @@
           <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
         </a>
       </div>
+
+      <!-- Time Sheets -->
+      <div class="feature col">
+        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/time%20sheet%20list.xls">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#inboxes-fill"/></svg>
+          </div>
+        </a>
+        <h2>Time Sheets</h2>
+        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/time%20sheet%20list.xls" class="icon-link d-inline-flex align-items-center">
+          Open Time Sheets
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
+        </a>
+      </div>
+
+      <!-- Absentee Calendar -->
+      <div class="feature col">
+        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/2022%20Absentee%20Calendar%20Master.xlsx">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#inboxes-fill"/></svg>
+          </div>
+        </a>
+        <h2>Absentee Calendar</h2>
+        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/2022%20Absentee%20Calendar%20Master.xlsx" class="icon-link d-inline-flex align-items-center">
+          Open Time Sheets
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
+        </a>
+      </div>
+    
     </div>
 
   </div>
