changed 2nd Time Sheets to Absentee Calendar

--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -236,7 +236,7 @@
         </a>
         <h2>Absentee Calendar</h2>
         <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/2022%20Absentee%20Calendar%20Master.xlsx" class="icon-link d-inline-flex align-items-center">
-          Open Time Sheets
+          Open Absentee Calendar
           <svg class="bi" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
         </a>
       </div>
