added kpklauncher links for blending workbooks

--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -294,6 +294,50 @@
     </div>
   </div>
 
+  <div class="container px-4 py-5" id="featured-3">
+    <div class="row g-1 py-2 row-cols-1 row-cols-lg-3">
+      <!-- Issue Sheet Gen -->
+      <div class="feature col">
+        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/03%20Projects/ProdLine-IssueSheets/ISSUESHEETGEN_2.0.xlsb">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#calendar2-range-fill"/></svg>
+          </div>
+        </a>
+        <h2>Issue Sheet Gen</h2>
+        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/03%20Projects/ProdLine-IssueSheets/ISSUESHEETGEN_2.0.xlsb" class="icon-link d-inline-flex align-items-center">
+          Open Issue Sheet Generator
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
+        </a>
+      </div>
+      <!-- Absentee Calendar -->
+      <div class="feature col">
+        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/01%20Spreadsheet%20Tools/Blending%20Absentee%20Calendar/2022%20BLENDING%20absentee%20calendar.xlsx">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#table"/></svg>
+          </div>
+        </a>
+        <h2>Absentee Calendar</h2>
+        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/01%20Spreadsheet%20Tools/Blending%20Absentee%20Calendar/2022%20BLENDING%20absentee%20calendar.xlsx" class="icon-link d-inline-flex align-items-center">
+          Open Absentee Calendar
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
+        </a>
+      </div>
+      <!-- Time Sheets -->
+      <div class="feature col">
+        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/01%20Spreadsheet%20Tools/Blending%20Time%20Sheets/Time%20Sheets.xlsx">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#table"/></svg>
+          </div>
+        </a>
+        <h2>Time Sheets</h2>
+        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/01%20Spreadsheet%20Tools/Blending%20Time%20Sheets/Time%20Sheets.xlsx" class="icon-link d-inline-flex align-items-center">
+          Open Time Sheets
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
+        </a>
+      </div>
+
+    </div>
+  </div>
 
   <div class="b-example-divider"></div>
 
