--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,9 +32,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/core/safetychecklist">Forklift Checklist</a>
                                 </li>
-                                {% comment %} <li class="nav-item">
+                                <li class="nav-item">
                                     <a class="nav-link" href="/core/blendthese">Blends</a>
-                                </li> {% endcomment %}
+                                </li>
                                 <li class="nav-item">    
                                     <a class="nav-link" href="/core/lotnumrecords">Lot Numbers</a>
                                 </li>
