changing blendingschedule path in KPKLauncher

--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -253,13 +253,13 @@
     <div class="row g-1 py-2 row-cols-1 row-cols-lg-3">
       <!-- Blending Schedule -->
       <div class="feature col">
-        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/03%20Projects/Blending%20Schedule/Blending-Schedule/BlendingSchedule_2.0.xlsb">
+        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/03%20Projects/Blending%20Schedule/Blending-Schedule/BlendingSchedule.xlsb">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
             <svg class="bi" width="1em" height="1em"><use xlink:href="#calendar2-range-fill"/></svg>
           </div>
         </a>
         <h2>Blending Schedule</h2>
-        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/03%20Projects/Blending%20Schedule/Blending-Schedule/BlendingSchedule_2.0.xlsb" class="icon-link d-inline-flex align-items-center">
+        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/03%20Projects/Blending%20Schedule/Blending-Schedule/BlendingSchedule.xlsb" class="icon-link d-inline-flex align-items-center">
           Open Blending Schedule
           <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
         </a>
