--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -17,6 +17,7 @@
                     <th scope="col">Lot_Number</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Date</th>
+                    <th scope="col">JSON Containing Procedure Step Information</th>
                 </tr>
             </thead>
             {% for item in lotnumlist %}
@@ -26,6 +27,7 @@
                     <td>{{ item.lot_number }}</td>
                     <td>{{ item.quantity }}</td>
                     <td>{{ item.date }}</td>
+                    <td>{{ item.steps }}</td>
                     {% if user.is_staff %}
                         <td>
                             <a href="/core/blendsheet/{{ item.lot_number }}">
