--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -250,6 +250,7 @@
 <!-- Blending Tools -->
   <div class="container px-4 py-5" id="featured-3">
     <h2 class="pb-2 border-bottom">Blending</h2>
+    <a href="192.168.178.50:8000">Enter the blendverse</a>
     <div class="row g-1 py-2 row-cols-1 row-cols-lg-3">
       <!-- Blending Schedule -->
       <div class="feature col">
