--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,9 @@
                                 <li class="nav-item">    
                                     <a class="nav-link" href="/core/lotnumrecords">Lot Numbers</a>
                                 </li>
+                                <li class="nav-item">    
+                                    <a class="nav-link" href="/core/reports">Reports</a>
+                                </li>
                             <!---admin nav link only appears if an admin is logged in-->
                                 {% if user.is_staff %}
                                 <li class="nav-item">    
